src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Standard Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Validated</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field shows which existing account record the lead record is related to.  This would help sales to find out more existing customer information on the lead.</description>
        <label>Link to Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attorney_Advice__c</fullName>
        <label>Attorney Advice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authorized_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorized Contact</label>
        <referenceTo>Authorized_Contact__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Best_Time_to_Call__c</fullName>
        <label>Best Time to Call</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Within the next hour</fullName>
                </value>
                <value>
                    <fullName>During business hours</fullName>
                </value>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Noon</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biz_Charge__c</fullName>
        <label>Biz Charge-AMEX</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biz_Checking__c</fullName>
        <label>Biz Checking-BofA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biz_Credit__c</fullName>
        <label>Biz Credit-DNB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biz_Ins__c</fullName>
        <label>Biz Ins-Bolt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biz_Plans__c</fullName>
        <label>Biz Plans-Palo Alto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biz_Printing__c</fullName>
        <label>Biz Printing-PrintRunner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Biz_Toll_Free__c</fullName>
        <label>Biz Toll Free #-DaVinci</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Later</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Banking_Account__c</fullName>
        <label>Business Banking Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Name_or_Entity__c</fullName>
        <label>Business Name or Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Purpose__c</fullName>
        <label>Business Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accommodations</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Health care</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Services: Professional</fullName>
                </value>
                <value>
                    <fullName>Services: Home</fullName>
                </value>
                <value>
                    <fullName>Social Work</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Services: Wholesale</fullName>
                </value>
                <value>
                    <fullName>Warehousing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Service__c</fullName>
        <label>Business Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>Incorporation</fullName>
                </value>
                <value>
                    <fullName>DBA</fullName>
                </value>
                <value>
                    <fullName>Nonprofit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Biz Not Sure</fullName>
                </value>
                <value>
                    <fullName>Patent</fullName>
                </value>
                <value>
                    <fullName>Trademark</fullName>
                </value>
                <value>
                    <fullName>Copyright</fullName>
                </value>
                <value>
                    <fullName>IP Not Sure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checkout_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkout Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Children__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Children</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claimed_Lead__c</fullName>
        <formula>If(OwnerId = &quot;005G0000001qcaP&quot;, False, True)</formula>
        <label>Claimed Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <label>Closed Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Longer Interested in LZ Product/Service</fullName>
                </value>
                <value>
                    <fullName>Product Too Expensive</fullName>
                </value>
                <value>
                    <fullName>Turnaround Time Too Long</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conduct_Biz_in_Multiple_States__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conduct Biz in Multiple States</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conducting_Business_Abroad__c</fullName>
        <label>Conducting Business Abroad</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Status_TEXT__c</fullName>
        <label>Contact Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Contact</fullName>
                </value>
                <value>
                    <fullName>Authorized Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Converting_an_Existing_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converting an Existing Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Today_Score__c</fullName>
        <formula>IF(AND(DATEVALUE(CreatedDate) == TODAY(),  TEXT(LeadSource) &lt;&gt; &apos;Mobile&apos;),30,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Today Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Time_Assigned__c</fullName>
        <label>Date/Time Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Created_Adjusted__c</fullName>
        <description>Date/Time Created based on Central Time adjusted for Daylight Saving</description>
        <label>Date/Time Created Adjusted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_Created_Flow__c</fullName>
        <formula>TEXT(MONTH(DATEVALUE(CreatedDate))) &amp; &quot;/&quot; &amp; TEXT(DAY(DATEVALUE(CreatedDate))) &amp; &quot;/&quot; &amp; TEXT(YEAR(DATEVALUE(CreatedDate))) &amp; &quot; &quot; &amp; 
if(VALUE(MID(TEXT(Date_Time_Created__c - 0.208333333),12,2))&gt;12,
TEXT(VALUE(MID(TEXT(Date_Time_Created__c - 0.208333333),12,2))-12) &amp; &quot;:&quot; &amp; MID(TEXT(Date_Time_Created__c - 0.208333333),15,2) &amp;&quot; PM CST&quot;, 
if(VALUE(MID(TEXT(Date_Time_Created__c - 0.208333333),12,2))=12,
TEXT(VALUE(MID(TEXT(Date_Time_Created__c - 0.208333333),12,2))) &amp; &quot;:&quot; &amp; MID(TEXT(Date_Time_Created__c - 0.208333333),15,2) &amp;&quot; PM CST&quot;, 
if(VALUE(MID(TEXT(Date_Time_Created__c - 0.208333333),12,2))=0,
&quot;12&quot; &amp; &quot;:&quot; &amp; TEXT(VALUE(MID(TEXT(Date_Time_Created__c - 0.208333333),15,2))) &amp;&quot; AM CST&quot;, 
TEXT(VALUE(MID(TEXT(Date_Time_Created__c - 0.208333333),12,2))) &amp; &quot;:&quot; &amp; MID(TEXT(Date_Time_Created__c - 0.208333333),15,2) &amp;&quot; AM CST&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date/Time Created Flow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_Created__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date/Time Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Initial_Activity__c</fullName>
        <label>Date/Time Initial Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Last_Modified_Adjusted__c</fullName>
        <description>Date/Time Last Modified based on Central Time adjusted for Daylight Saving</description>
        <label>Date/Time Last Modified Adjusted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_Modified_Flow__c</fullName>
        <formula>TEXT(MONTH(DATEVALUE(LastModifiedDate))) &amp; &quot;/&quot; &amp; TEXT(DAY(DATEVALUE(LastModifiedDate))) &amp; &quot;/&quot; &amp; TEXT(YEAR(DATEVALUE(LastModifiedDate))) &amp; &quot; &quot; &amp; 
if(VALUE(MID(TEXT(Date_Time_Modified__c - 0.208333333),12,2))&gt;12,
TEXT(VALUE(MID(TEXT(Date_Time_Modified__c - 0.208333333),12,2))-12) &amp; &quot;:&quot; &amp; MID(TEXT(Date_Time_Modified__c - 0.208333333),15,2) &amp;&quot; PM CST&quot;, 
if(VALUE(MID(TEXT(Date_Time_Modified__c - 0.208333333),12,2))=12,
TEXT(VALUE(MID(TEXT(Date_Time_Modified__c - 0.208333333),12,2))) &amp; &quot;:&quot; &amp; MID(TEXT(Date_Time_Modified__c - 0.208333333),15,2) &amp;&quot; PM CST&quot;, 
if(VALUE(MID(TEXT(Date_Time_Modified__c - 0.208333333),12,2))=0,
&quot;12&quot; &amp; &quot;:&quot; &amp; TEXT(VALUE(MID(TEXT(Date_Time_Modified__c - 0.208333333),15,2))) &amp;&quot; AM CST&quot;, 
TEXT(VALUE(MID(TEXT(Date_Time_Modified__c - 0.208333333),12,2))) &amp; &quot;:&quot; &amp; MID(TEXT(Date_Time_Modified__c - 0.208333333),15,2) &amp;&quot; AM CST&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date/Time Modified Flow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_Modified__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date/Time Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Registration__c</fullName>
        <label>Date of Registration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_of_the_Week__c</fullName>
        <formula>CASE(
MOD(DATEVALUE( CreatedDate ) - DATE(1900, 1, 7), 7),
0, &quot;Sunday&quot;,
1, &quot;Monday&quot;,
2, &quot;Tuesday&quot;,
3, &quot;Wednesday&quot;,
4, &quot;Thursday&quot;,
5, &quot;Friday&quot;,
6, &quot;Saturday&quot;, &quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of the Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daylight_Saving_Created_Date__c</fullName>
        <description>Daylight Saving on Created Date (Yes or No)</description>
        <formula>IF ( DATEVALUE(CreatedDate) &gt;= 
DATE ( YEAR (DATEVALUE(CreatedDate)),3,1) 
+ 
( 
14- 
CASE( MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),3,1) - DATE (1900,1,7),7) , 
0,7,MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),3,1) - DATE (1900,1,7),7)) 
) 
&amp;&amp; 
DATEVALUE(CreatedDate) &lt; 
DATE ( YEAR (DATEVALUE(CreatedDate)),11,1) 
+ 
( 
7- 
CASE( MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),11,1) - DATE (1900,1,7),7) , 
0,7,MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),11,1) - DATE (1900,1,7),7)) 
), 
&apos;Yes&apos;, 
&apos;No&apos;)</formula>
        <label>Daylight Saving Created Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daylight_Saving_Last_Modified__c</fullName>
        <description>Daylight Saving on Last Modified Date (Yes or No)</description>
        <formula>IF ( DATEVALUE( LastModifiedDate ) &gt;= 
DATE ( YEAR (DATEVALUE( LastModifiedDate )),3,1) 
+ 
( 
14- 
CASE( MOD(DATE ( YEAR (DATEVALUE( LastModifiedDate )),3,1) - DATE (1900,1,7),7) , 
0,7,MOD(DATE ( YEAR (DATEVALUE( LastModifiedDate )),3,1) - DATE (1900,1,7),7)) 
) 
&amp;&amp; 
DATEVALUE( LastModifiedDate ) &lt; 
DATE ( YEAR (DATEVALUE( LastModifiedDate )),11,1) 
+ 
( 
7- 
CASE( MOD(DATE ( YEAR (DATEVALUE( LastModifiedDate )),11,1) - DATE (1900,1,7),7) , 
0,7,MOD(DATE ( YEAR (DATEVALUE( LastModifiedDate )),11,1) - DATE (1900,1,7),7)) 
), 
&apos;Yes&apos;, 
&apos;No&apos;)</formula>
        <label>Daylight Saving Last Modified</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_2__c</fullName>
        <label>Description 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <label>Device Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligible_for_Discount__c</fullName>
        <formula>&quot;.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligible for Discount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_of_Business_Sales__c</fullName>
        <label>End of Business</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Response__c</fullName>
        <label>First Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FkUser__c</fullName>
        <externalId>true</externalId>
        <label>FkUser</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Genesys_Interaction_Id__c</fullName>
        <description>Genesys Interaction Id</description>
        <externalId>true</externalId>
        <label>Genesys Interaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_LZ_Account__c</fullName>
        <formula>IF(ISBLANK(Account__r.Customer_ID__c), &quot;No&quot;, &quot;Yes&quot;)</formula>
        <label>Has LZ Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_Employees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have Employees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_Multiple_Owners__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have Multiple Owners</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_Physical_Storefront__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have Physical Storefront</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Homeowner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Homeowner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hour_Created__c</fullName>
        <description>The hour the record is created in Central Time.  Daylight saving time is considered in the formula.</description>
        <formula>IF ( Daylight_Saving_Created_Date__c = &apos;Yes&apos;, 
(CASE( VALUE(MID(TEXT(CreatedDate),12,2)) , 
00, 19, 
01, 20, 
02, 21, 
03, 22, 
04, 23, 
05, 00, 
06, 01, 
07, 02, 
08, 03, 
09, 04, 
10, 05, 
11, 06, 
12, 07, 
13, 08, 
14, 09, 
15, 10, 
16, 11, 
17, 12, 
18, 13, 
19, 14, 
20, 15, 
21, 16, 
22, 17, 
23, 18, 
NULL)) 
, 
(CASE( VALUE(MID(TEXT(CreatedDate),12,2)) , 
00, 18, 
01, 19, 
02, 20, 
03, 21, 
04, 22, 
05, 23, 
06, 00, 
07, 01, 
08, 02, 
09, 03, 
10, 04, 
11, 05, 
12, 06, 
13, 07, 
14, 08, 
15, 09, 
16, 10, 
17, 11, 
18, 12, 
19, 13, 
20, 14, 
21, 15, 
22, 16, 
23, 17, 
NULL)))</formula>
        <label>Hour Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hour_Last_Modified__c</fullName>
        <description>The hour the record is last modified in Central Time. Daylight saving time is considered in the formula.</description>
        <formula>IF ( Daylight_Saving_Last_Modified__c = &apos;Yes&apos;, 
(CASE( VALUE(MID(TEXT(LastModifiedDate),12,2)) , 
00, 19, 
01, 20, 
02, 21, 
03, 22, 
04, 23, 
05, 00, 
06, 01, 
07, 02, 
08, 03, 
09, 04, 
10, 05, 
11, 06, 
12, 07, 
13, 08, 
14, 09, 
15, 10, 
16, 11, 
17, 12, 
18, 13, 
19, 14, 
20, 15, 
21, 16, 
22, 17, 
23, 18, 
NULL)) 
, 
(CASE( VALUE(MID(TEXT(LastModifiedDate),12,2)) , 
00, 18, 
01, 19, 
02, 20, 
03, 21, 
04, 22, 
05, 23, 
06, 00, 
07, 01, 
08, 02, 
09, 03, 
10, 04, 
11, 05, 
12, 06, 
13, 07, 
14, 08, 
15, 09, 
16, 10, 
17, 11, 
18, 12, 
19, 13, 
20, 14, 
21, 15, 
22, 16, 
23, 17, 
NULL)))</formula>
        <label>Hour Last Modified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hour__c</fullName>
        <description>formula field captures &quot;hour&quot; from date/time created and equates to Central Time. This formula accounts for day light savings</description>
        <formula>IF ( DATEVALUE( CreatedDate ) &gt;= 
DATE ( YEAR (DATEVALUE(  CreatedDate  )),3,1) 
+ 
( 
14- 
CASE( MOD(DATE ( YEAR (DATEVALUE( CreatedDate )),3,1) - DATE (1900,1,7),7) , 
0,7,MOD(DATE ( YEAR (DATEVALUE( CreatedDate )),3,1) - DATE (1900,1,7),7)) 
) 
&amp;&amp; 
DATEVALUE( CreatedDate ) &lt; 
DATE ( YEAR (DATEVALUE( CreatedDate )),11,1) 
+ 
( 
7- 
CASE( MOD(DATE ( YEAR (DATEVALUE( CreatedDate )),11,1) - DATE (1900,1,7),7) , 
0,7,MOD(DATE ( YEAR (DATEVALUE( CreatedDate )),11,1) - DATE (1900,1,7),7)) 
),
(CASE( VALUE(MID(TEXT( CreatedDate ),12,2)) , 
00, &apos;19:00&apos;, 
01, &apos;20:00&apos;, 
02, &apos;21:00&apos;, 
03, &apos;22:00&apos;, 
04, &apos;23:00&apos;, 
05, &apos;00:00&apos;, 
06, &apos;01:00&apos;, 
07, &apos;02:00&apos;, 
08, &apos;03:00&apos;, 
09, &apos;04:00&apos;, 
10, &apos;05:00&apos;, 
11, &apos;06:00&apos;, 
12, &apos;07:00&apos;, 
13, &apos;08:00&apos;, 
14, &apos;09:00&apos;, 
15, &apos;10:00&apos;, 
16, &apos;11:00&apos;, 
17, &apos;12:00&apos;, 
18, &apos;13:00&apos;, 
19, &apos;14:00&apos;, 
20, &apos;15:00&apos;, 
21, &apos;16:00&apos;, 
22, &apos;17:00&apos;, 
23, &apos;18:00&apos;, 
NULL))
,
(CASE( VALUE(MID(TEXT( CreatedDate ),12,2)) , 
00, &apos;18:00&apos;, 
01, &apos;19:00&apos;, 
02, &apos;20:00&apos;, 
03, &apos;21:00&apos;, 
04, &apos;22:00&apos;, 
05, &apos;23:00&apos;, 
06, &apos;00:00&apos;, 
07, &apos;01:00&apos;, 
08, &apos;02:00&apos;, 
09, &apos;03:00&apos;, 
10, &apos;04:00&apos;, 
11, &apos;05:00&apos;, 
12, &apos;06:00&apos;, 
13, &apos;07:00&apos;, 
14, &apos;08:00&apos;, 
15, &apos;09:00&apos;, 
16, &apos;10:00&apos;, 
17, &apos;11:00&apos;, 
18, &apos;12:00&apos;, 
19, &apos;13:00&apos;, 
20, &apos;14:00&apos;, 
21, &apos;15:00&apos;, 
22, &apos;16:00&apos;, 
23, &apos;17:00&apos;, 
NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hour (Central Time)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_soon_to_start_company__c</fullName>
        <label>How soon to start company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>As Soon As Possible</fullName>
                </value>
                <value>
                    <fullName>Within Next 30 Days</fullName>
                </value>
                <value>
                    <fullName>Within Next 6 months</fullName>
                </value>
                <value>
                    <fullName>Not Sure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Product_Text__c</fullName>
        <label>Initial Product Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Product__c</fullName>
        <label>Initial Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>BAS</fullName>
                </value>
                <value>
                    <fullName>BAP</fullName>
                </value>
                <value>
                    <fullName>LAP</fullName>
                </value>
                <value>
                    <fullName>DBA</fullName>
                </value>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>NP</fullName>
                </value>
                <value>
                    <fullName>INC</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>501c3</fullName>
                </value>
                <value>
                    <fullName>Amend</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>B&amp;R</fullName>
                </value>
                <value>
                    <fullName>COGS</fullName>
                </value>
                <value>
                    <fullName>Cert Copy</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>Conv</fullName>
                </value>
                <value>
                    <fullName>Diss</fullName>
                </value>
                <value>
                    <fullName>MMM</fullName>
                </value>
                <value>
                    <fullName>EIN</fullName>
                </value>
                <value>
                    <fullName>ENC</fullName>
                </value>
                <value>
                    <fullName>ENR</fullName>
                </value>
                <value>
                    <fullName>FQ</fullName>
                </value>
                <value>
                    <fullName>IR</fullName>
                </value>
                <value>
                    <fullName>LLP</fullName>
                </value>
                <value>
                    <fullName>LP</fullName>
                </value>
                <value>
                    <fullName>OA</fullName>
                </value>
                <value>
                    <fullName>RA</fullName>
                </value>
                <value>
                    <fullName>S-Corp Elec</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Source_Activity__c</fullName>
        <label>Initial Source Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initial_Source__c</fullName>
        <label>Initial Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_In__c</fullName>
        <label>I&apos;m Interested In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business-related matters</fullName>
                </value>
                <value>
                    <fullName>Personal-related matters</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kenshoo_Id__c</fullName>
        <label>Mktg Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Time_Added_to_Campaign__c</fullName>
        <label>Last Time Added to Campaign</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Source_Activity__c</fullName>
        <label>Date/Time Latest Source Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadOwnerChanged__c</fullName>
        <label>LeadOwnerChanged</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Call_Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Voicemail</fullName>
                </value>
                <value>
                    <fullName>No Message</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Spoke</fullName>
                </value>
                <value>
                    <fullName>VM Attempt 1</fullName>
                </value>
                <value>
                    <fullName>NM Attempt 2</fullName>
                </value>
                <value>
                    <fullName>NM Attempt 3</fullName>
                </value>
                <value>
                    <fullName>NM Attempt 4</fullName>
                </value>
                <value>
                    <fullName>VM Final Attempt</fullName>
                </value>
                <value>
                    <fullName>Contacted/Spoke - Commission Eligible</fullName>
                </value>
                <value>
                    <fullName>Contacted/Spoke - Ineligible</fullName>
                </value>
                <value>
                    <fullName>Call Transferred</fullName>
                </value>
                <value>
                    <fullName>Service Unavailable</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Number_AS__c</fullName>
        <label>Lead Number AS</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead_Number_BIZ__c</fullName>
        <label>Lead Number BIZ</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead_Record_Type__c</fullName>
        <formula>RecordTypeId</formula>
        <label>Lead Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score2__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>